syntax = "proto3";
import "google/protobuf/wrappers.proto";

package proto;

option java_package = "org.app.order";
option java_outer_classname = "OrderServiceProto";
option go_package = "/order";

message OrderRequest {
  string productId = 1;
  int32 quantity = 2;
}

message OrderResponse {
  google.protobuf.DoubleValue totalPrice = 1;
}

service OrderService {
  rpc CalculateTotal(OrderRequest) returns (OrderResponse);
}

